# swaymonad

./: LICENSE  README.md  common.py  cycle_windows.py  flake.nix  layout.py  master_operations.py  move_counter.py  n_col.py  nop_layout.py  promote_window.py  pyproject.toml  swaymonad.py
src/swaymonad/: common.py  cycle_windows.py  layout.py  n_col.py  nop_layout.py  print_tree.py  promote_window.py  swaymonad.py  transformations.py
